welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: ')' expected but ',' found.
  if (speed < 60 , !isBirthday )
                 ^caughtSpeeding:14: error: illegal start of simple expression
}
^